Corrected alignment of #movies-row-3

--- a/index.css
+++ b/index.css
@@ -12,9 +12,9 @@ body {
     padding: 0;
     border: 0;
     font-family: 'Graphik', Helvetica, Arial, sans-serif;
-    display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: repeat(3, 1fr);
+    /* display: grid; */
+    /* grid-template-columns: 1; */
+    /* grid-template-rows: repeat(3, 1fr); */
 }
 
 
@@ -80,6 +80,7 @@ body {
 }
 
 #main-5 {
+    color: rgba(255, 255, 255, 0.753);
     font-size: 11px;
     font-weight: lighter; 
 }
@@ -217,6 +218,11 @@ body {
 .movies-container {
     height: 65vh;
     background-color: black;
+    /* position: absolute; */
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* align-items: center; */
+    /* justify-content: center; */
 }
 
 .movies-top-container {
@@ -351,13 +357,14 @@ body {
 }
 
 .movies-bottom-container {
+    /* height: 50vh; */
     color: rgba(255, 255, 255, 0.561);
     display: flex;
     justify-content: flex-end;
     align-items: center;
     align-content: space-around;
-    margin-top: 100px;
-    margin-right: 90px;
+    margin-top: 300px;
+    margin-right: 100px;
 }
 
 #bottom-content-5{
